modified:   _config.yml 	modified:   _posts/2013-12-15-welcome-to-jekyll.markdown 	deleted:    _posts/2014-01-07-tog-linux-class1.ext 	deleted:    a-draft-post.md 	modified:   about.md 	deleted:    site.tar.gz 	_config.yml~ 	_drafts/2013-12-15-this-is-a-draft.markdown 	_drafts/2013-12-15-this-is-a-draft.markdown~ 	_posts/2013-12-15-welcome-to-jekyll.markdown~ 	_posts/2014-01-07-tog-linux-class1.md 	_posts/2014-01-07-tog-linux-class1.md~ 	about.md~

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ search:           true
 # Your site's domain goes here. When working locally use localhost server leave blank
 # PS. If you set this wrong stylesheets and scripts won't load and most links will break.
 # PPS. If you leave it blank for local testing home links won't work, they'll be fine for live domains though.
-url:              #http://padraic.org/
+url:              http://padraic.org/
 
 
 # Owner/author information
@@ -15,10 +15,10 @@ owner:
   avatar:         bunny.gif
   email:          your@email.com
   # Social networking links used in footer. Update and remove as you like.
-  twitter:
+  twitter:         "padraicst"
   facebook:
   github:
-  linkedin:
+  linkedin:     
 
   # For Google Authorship https://plus.google.com/authorship
   google_plus:    "http://plus.google.com/123123123123132123"
@@ -41,7 +41,7 @@ links:
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    Europe/Dublin
 pygments:    true
 markdown:    kramdown
 
